update id_generator and java path